--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -11,6 +11,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-imask": "^7.6.1",
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.19",
